Fix alignment

--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -4,3 +4,7 @@
     width: 100%;
     overflow: hidden;
 }
+
+.footer img {
+    width: 100%;
+}
