--- a/assets/styles/projektai.css
+++ b/assets/styles/projektai.css
@@ -6,6 +6,9 @@
 
 .section {
     width: 45%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .hover-container {
